--- a/CatResponder/CatResponder.csproj
+++ b/CatResponder/CatResponder.csproj
@@ -93,5 +93,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\catSkype.gif" />
+    <Resource Include="Images\OFFswitch.png" />
+    <Resource Include="Images\ONswitch.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
